--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "ex-mate",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "src/Scripts/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "electron-localstorage": "^1.0.5",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
